scss done on homepage, sign-in and user

--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -22,6 +22,11 @@ header {
   .logo {
     display: flex;
     align-items: center;
+
+    img {
+      max-width: 100%;
+      width: 200px;
+    }
   }
 
   .fa-circle-user {
