--- a/src/style/base/_general.scss
+++ b/src/style/base/_general.scss
@@ -1,10 +1,30 @@
-html {
+  #root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
     text-align: center;
     color: #2c3e50;
   }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+
+  main {
+    flex: 1;
   }
+
+  .dark-bg {
+    background-color: #12002b;
+  }
+
+  .sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
+}
