--- a/src/style/components/_feature.scss
+++ b/src/style/components/_feature.scss
@@ -1,4 +1,4 @@
-.features__container {
+.features {
   display: flex;
   flex-direction: column;
 
@@ -7,25 +7,25 @@
   }
 }
 
-.features {
+.features__container {
   flex: 1;
   padding: 2.5rem;
+}
 
-  &__text {
-    margin-block: 16px;
-  }
+.features__text {
+  margin-block: 16px;
+}
 
-  &__icon {
-    border: 10px solid #00bc77;
-    border-radius: 50%;
-    padding: 1rem;
-  }
+.features__icon {
+  border: 10px solid #00bc77;
+  border-radius: 50%;
+  padding: 1rem;
+}
 
-  &__title {
-    color: #222;
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-top: 1.25rem;
-    margin-bottom: 0.5rem;
-  }
+.features__title {
+  color: #222;
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-top: 1.25rem;
+  margin-bottom: 0.5rem;
 }
