--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,7 +2,9 @@
 @use 'base/reset';
 @use "base/typography";
 
+@use "components/button";
 @use "components/feature";
+@use "components/form";
 @use "components/hero";
 
 @use "layout/header";
