--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -25,3 +25,31 @@
 .input__remember label {
   margin-left: 0.5rem;
 }
+
+// Edit username form
+
+.user__edit__button {
+  display: flex;
+  margin: 20px;
+}
+
+.edit__form__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.user__header {
+  width: 250px;
+  margin: auto;
+}
+
+.user__header__form{
+  margin-block: 40px;
+}
+
+.username {
+  margin-right: 0.5rem;
+  font-weight: bold;
+}
+
+
