--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -1,50 +1,65 @@
 .hero {
-  background-position: 0 -50px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 300px;
   position: relative;
+  height: 300px;
+  overflow: hidden;
+}
 
-  &__content {
-    position: relative;
-    top: 2rem;
-    width: 200px;
-    background: white;
-    padding: 2rem;
-    text-align: left;
-    margin: auto;
-    box-sizing: content-box;
-  }
+.hero__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 0 -50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-  &__title {
-    font-weight: bold;
-    font-size: 1rem;
-    text-wrap: nowrap;
-  }
+.hero__content {
+  position: relative;
+  z-index: 1;
+  top: 2rem;
+  width: 200px;
+  background: white;
+  padding: 2rem;
+  text-align: left;
+  margin: 0 auto;
+  box-sizing: content-box;
+}
 
-  &__subtitle {
-    font-size: 0.9rem;
-    margin-top: 1.25rem;
-  }
+.hero__title {
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 0;
+}
 
-  @media (min-width: 920px) {
+.hero__subtitle {
+  font-size: 0.9rem;
+  margin-top: 1.25rem;
+}
+
+@media (min-width: 920px) {
+  .hero {
     height: 400px;
-    background-position: 0% 33%;
+  }
 
-    .hero__content {
-      position: absolute;
-      top: 50px;
-      right: 50px;
-      width: 300px;
-      margin: 2rem;
-    }
+  .hero__image {
+    object-position: 0% 33%;
+  }
 
-    .hero__title {
-      font-size: 1.5rem;
-    }
+  .hero__content {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 300px;
+    margin: 2rem;
+  }
 
-    .hero__subtitle {
-      font-size: 1.2rem;
-    }
+  .hero__title {
+    font-size: 1.5rem;
+  }
+
+  .hero__subtitle {
+    font-size: 1.2rem;
   }
 }
+
